# pp_2021_spring_engineers

.github/workflows/: main.yml
modules/Visualize/: CMakeLists.txt  ex1.txt  visualize.cpp
modules/task_1/bourmistrova_e_tr_int/: main.cpp  trapezoid_integral.cpp  trapezoid_integral.h
modules/task_1/elandaev_p_integral_rectangle/: main.cpp  rectangle.cpp  rectangle.h
modules/task_1/eremina_a_convex_hull_bin/: convex_hull_bin.cpp  convex_hull_bin.h  main.cpp
modules/task_1/kadnikov_d_linear_filter_vert/: linear_filter_vert.cpp  linear_filter_vert.h  main.cpp
modules/task_1/kamskov_e_shell_batcher_sort/: main.cpp  shell_batcher.cpp  shell_batcher.h
modules/task_1/krasilnikov_a_sobel_operator/: sobel_operator.cpp  sobel_operator.h
modules/task_1/rukhovich_i_csr_mult_double/: csr_mult_double.cpp  csr_mult_double.h  main.cpp
modules/task_1/stoicheva_d_dijkstra/: CMakeLists.txt
modules/task_2/anisimova_p_sparse_matrix_omp/: main.cpp  sparsematrix.cpp  sparsematrix.h
modules/task_2/baulin_m_radix_sort_simple_merge_omp/: main.cpp  radix_sort.cpp  radix_sort.h
modules/task_2/bourmistrova_e_trapez_integr_omp/: main.cpp  trapezoid_integral_omp.cpp  trapezoid_integral_omp.h
modules/task_2/bulychev_a_shell_sort_simple_omp/: main.cpp  shell_sort_simple_omp.cpp  shell_sort_simple_omp.h
modules/task_2/chesnokov_a_jarvis/: jarvis.cpp  jarvis.h  main.cpp
modules/task_2/egorov_k_gauss_filter_omp/: egorov_k_gauss_filter_omp.cpp  egorov_k_gauss_filter_omp.h  main.cpp
modules/task_2/elandaev_p_integral_rectangle_omp/: main.cpp  (+2 more)
modules/task_3/: CMakeLists.txt
(+196 files in other folders)
